Prevent formula from wrapping if font size is changed

--- a/css/rolls.css
+++ b/css/rolls.css
@@ -4,11 +4,11 @@
 }
 
 .roll-formula {
-    min-width: 220px;
+    min-width: 15em;
 }
 
 .dual_wielding-formula {
-    min-width: 220px;
+    min-width: 15em;
 }
 
 .roll-effect {
