--- a/css/spells.css
+++ b/css/spells.css
@@ -12,7 +12,7 @@
 }
 
 .spell-formula {
-    min-width: 220px;
+    min-width: 15em;
 }
 
 .spell-difficulty .slider-selection {
